--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -83,7 +83,7 @@
 .project-img-container {
     position: relative;
     width: 100%;
-    height: 279px;
+    height: 226px;
     border-radius: 15px;
     box-shadow: 4px 2px 13px 1px rgba(0, 0, 0, 0.3);
 }
@@ -147,6 +147,7 @@
 @include breakpoint(500px) {
     .project-img-container {
         width: 416px;
+        height: 279px;
     }
 
     .arrow-img {
